Fix overlapping name when toggling name input

--- a/css/styles.css
+++ b/css/styles.css
@@ -345,8 +345,8 @@ h1 {
 .input-container {
   position: absolute;
   top: 50%;
-  left: 25%;
-  transform: translate(-25%, -50%);
+  left: 0;
+  transform: translateY(-50%);
 
   display: flex;
   flex-direction: column;
@@ -355,14 +355,12 @@ h1 {
 
   background: inherit;
   visibility: hidden;
-}
-
-.input-container {
   text-transform: none;
   max-width: 100%;
 }
 
 .input-container label {
+  background: inherit;
   padding-left: 10px;
   white-space: nowrap;
 }
